<resources>
    <string name="app_name">MEME</string>
    <string name="memo_save">저장</string>
    <string name="memo_cancel">취소</string>
    <string name="memo_create">등록</string>
    <string name="memo_delete">메모 삭제</string>
    <string name="memo_delete_all">모든 메모 삭제</string>
    <string name="memo_app_info">앱 정보</string>
    <string name="memo_fix">메모 고정 및 해제</string>
    <string name="memo_widget">위젯으로 띄우기</string>
    <string name="todo_title">오늘 할 일</string>
    <string name="todo_content">상세 내용</string>
    <string name="todo_time">시간</string>
    <string name="todo_alarm_10">10분 후 알림</string>
    <string name="no_memo">메모가 없습니다</string>
    <string name="check_fix">이 할일을 상단에 고정하시겠습니까?</string>

    <string name="fab_content_desc">할일 메모 생성</string>
    <string name="fixed_icon_description">할일 메모 고정</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>